<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.hadicph.stenovnspizza.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_order"
            app:destination="@id/nav_order" />
        <action
            android:id="@+id/action_nav_home_to_aboutUs"
            app:destination="@id/aboutUs" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.github.hadicph.stenovnspizza.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.github.hadicph.stenovnspizza.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/aboutUs"
        android:name="com.github.hadicph.stenovnspizza.ui.aboutUs.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />
</navigation>